test_next-20170815/20170815151534/build/defconfig/build_20170815151534_log.txt
test_build: Tue Aug 15 15:18:14 PDT 2017: started on defconfig test_next-20170815 (497247033eb19f49b7cbdfa68387351b8d34f923)
test_build: Tue Aug 15 15:18:14 PDT 2017: serial is 20170815151534
arch/arm64/Makefile:23: ld does not support --fix-cortex-a53-843419; kernel may be susceptible to erratum
arch/arm64/Makefile:44: Detected assembler with broken .inst; disassembly will be unreliable
drivers/acpi/spcr.c: In function ‘parse_spcr’:
drivers/acpi/spcr.c:168:1: error: expected expression before ‘<<’ token
 <<<<<<< HEAD
 ^
drivers/acpi/spcr.c:198:1: error: expected expression before ‘>>’ token
 >>>>>>> acpi-spcr
 ^
drivers/acpi/spcr.c: At top level:
drivers/acpi/spcr.c:34:13: warning: ‘qdf2400_erratum_44_present’ defined but not used [-Wunused-function]
 static bool qdf2400_erratum_44_present(struct acpi_table_header *h)
             ^
make[2]: *** [drivers/acpi/spcr.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [drivers/acpi] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [drivers] Error 2
make: *** Waiting for unfinished jobs....
test_build: Tue Aug 15 15:21:19 PDT 2017: FAILED on defconfig test_next-20170815
test_build: Tue Aug 15 15:21:19 PDT 2017: ended on defconfig test_next-20170815
